test/error/earlyreturn.lua
local a = 0;
do
	return a;
end
return a;
a = 1;
